git-svn-id: https://www.seasar.org/svn/sandbox/weblauncher/trunk@13 8523766c-5c40-478b-b397-97bd31507e9a

--- a/org.seasar.weblauncher/plugin.xml
+++ b/org.seasar.weblauncher/plugin.xml
@@ -62,7 +62,7 @@
          <action
                class="org.seasar.weblauncher.action.StartServerAction"
                enablesFor="1"
-               icon="icons/nav_go.gif"
+               icon="icons/start.gif"
                id="org.seasar.weblauncher.action.start"
                label="%start"
                menubarPath="org.seasar.weblauncher.menu/additons">
@@ -77,7 +77,7 @@
          <action
                class="org.seasar.weblauncher.action.StopServerAction"
                enablesFor="1"
-               icon="icons/term_sbook.gif"
+               icon="icons/stop.gif"
                id="org.seasar.weblauncher.action.stop"
                label="%stop"
                menubarPath="org.seasar.weblauncher.menu/additons2">
@@ -176,26 +176,6 @@
                >
             <groupMarker name="org.seasar.weblauncher.groupMarker"/>
          </menu>
-         <action
-               class="org.seasar.weblauncher.action.ViewOnServerAction"
-               enablesFor="1"
-               icon="icons/browser.gif"
-               id="org.seasar.weblauncher.action.view2"
-               label="%view"
-               style="push"
-               toolbarPath="org.seasar.weblauncher.groupMarker"
-               >
-            <enablement>
-               <or>
-                  <objectState
-                        name="projectPersistentProperty"
-                        value="org.seasar.weblauncher.checkserver=true"/>
-                  <objectState
-                        name="projectSessionProperty"
-                        value="org.seasar.weblauncher.serverstate"/>
-               </or>
-            </enablement>
-         </action>
         
         
          <action
@@ -205,8 +185,7 @@
                id="org.seasar.weblauncher.action.stop2"
                label="%stop"
                style="push"
-               toolbarPath="org.seasar.weblauncher.groupMarker"
-               >
+               toolbarPath="org.seasar.weblauncher.groupMarker">
             <enablement>
                <and>
                <objectState
@@ -225,8 +204,7 @@
                id="org.seasar.weblauncher.action.start2"
                label="%start"
                style="push"
-               toolbarPath="org.seasar.weblauncher.groupMarker"
-               >
+               toolbarPath="org.seasar.weblauncher.groupMarker">
             <enablement>
                <and>
 	               <not>
@@ -259,6 +237,57 @@
             categoryId="org.seasar.weblauncher.command.category"
             id="org.seasar.weblauncher.command.view"
             name="%view"/>
+   </extension>
+   <extension
+         point="org.eclipse.ui.editorActions">
+      <editorContribution
+            id="org.seasar.weblauncher.editorContribution"
+            targetID="org.eclipse.ui.DefaultTextEditor">
+         <menu
+               id="org.seasar.weblauncher.menu.editor"
+               label="%plugin.label"
+               path="Navigate/additions">
+            <groupMarker name="additions"/>
+         </menu>
+         <action
+               class="org.seasar.weblauncher.action.ViewOnServerAction"
+               definitionId="org.seasar.weblauncher.command.view"
+               icon="icons/browser.gif"
+               id="org.seasar.weblauncher.action.editor.view"
+               label="%view"
+               menubarPath="Navigate/org.seasar.weblauncher.menu.editor/additions"
+               style="push"/>
+         <menu
+               id="org.seasar.weblauncher.menu.editor.server"
+               label="%plugin.label">
+            <groupMarker name="additions"/>
+         </menu>
+         <action
+               class="org.seasar.weblauncher.action.StopServerEditorAction"
+               definitionId="org.seasar.weblauncher.command.stop"
+               icon="icons/stop.gif"
+               id="org.seasar.weblauncher.action.editor.stop"
+               label="%stop"
+               menubarPath="org.seasar.weblauncher.menu.editor.server/additions"
+               style="push"/>
+         <action
+               class="org.seasar.weblauncher.action.StartServerEditorAction"
+               definitionId="org.seasar.weblauncher.command.start"
+               icon="icons/start.gif"
+               id="org.seasar.weblauncher.action.editor.start"
+               label="%start"
+               menubarPath="org.seasar.weblauncher.menu.editor.server/additions"
+               style="push"/>
+      </editorContribution>
+      <editorContribution
+            id="org.seasar.weblauncher.editorContribution.jdt"
+            targetID="org.eclipse.jdt.ui.CompilationUnitEditor"/>
+      <editorContribution
+            id="org.seasar.weblauncher.editorContribution.wst.xml"
+            targetID="org.eclipse.wst.xml.ui.internal.tabletree.XMLMultiPageEditorPart"/>
+      <editorContribution
+            id="org.seasar.weblauncher.editorContribution.wst.html"
+            targetID="org.eclipse.wst.html.core.htmlsource.source"/>
    </extension>
 
 </plugin>
