git-svn-id: https://www.seasar.org/svn/sandbox/weblauncher/trunk@33 8523766c-5c40-478b-b397-97bd31507e9a

--- a/org.seasar.weblauncher/plugin.xml
+++ b/org.seasar.weblauncher/plugin.xml
@@ -2,7 +2,7 @@
 <?eclipse version="3.2"?>
 <plugin>
    <extension
-         id="org.seasar.weblauncher.nature"
+         id="nature"
          point="org.eclipse.core.resources.natures">
       <runtime>
          <run class="org.seasar.weblauncher.nature.WebLauncherNature"/>
@@ -141,6 +141,7 @@
             objectClass="org.eclipse.jdt.core.IJavaProject"/>
    </extension>
    <extension
+         id="launchConfigurationTypes"
          point="org.eclipse.debug.core.launchConfigurationTypes">
       <launchConfigurationType
             delegate="org.seasar.weblauncher.launch.WebLaunchConfigurationDelegate"
