git-svn-id: https://www.seasar.org/svn/sandbox/weblauncher/trunk@37 8523766c-5c40-478b-b397-97bd31507e9a

--- a/org.seasar.weblauncher/plugin.properties
+++ b/org.seasar.weblauncher/plugin.properties
@@ -18,5 +18,5 @@ plugin.brand=WebLauncher Eclipse Plugin
 
 plugin.label=WebLauncher
 start=Start Web Server
-stop=Stop Web Server
 view=View On Server
+toggle=Start/Stop Web Server
