--- a/org.seasar.weblauncher/src/main/resouces/org/seasar/weblauncher/nls/Images.properties
+++ b/org.seasar.weblauncher/src/main/resouces/org/seasar/weblauncher/nls/Images.properties
@@ -14,3 +14,5 @@
 # governing permissions and limitations under the License.
 ###############################################################################
 RUNNING=images/dec-running.gif
+START=images/start.gif
+STOP=images/stop.gif
