git-svn-id: https://www.seasar.org/svn/sandbox/weblauncher/trunk@42 8523766c-5c40-478b-b397-97bd31507e9a

--- a/org.seasar.weblauncher/build.properties
+++ b/org.seasar.weblauncher/build.properties
@@ -6,7 +6,8 @@ bin.includes = META-INF/,\
                commonLib/,\
                plugin_ja.properties,\
                plugin.properties,\
-               lib/
+               lib/,\
+               commonLib/commons-logging-1.1.jar
 jars.compile.order = weblauncher.jar
 output.weblauncher.jar = bin/
 source.weblauncher.jar = src/main/java/,\
